; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_hisax_fcpcipnp.c_fcpci_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_hisax_fcpcipnp.c_fcpci_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fritz_adapter = type { i32, i64 }

@AVM_STATUS0_DIS_TIMER = common dso_local global i32 0, align 4
@AVM_STATUS0_RES_TIMER = common dso_local global i32 0, align 4
@AVM_STATUS0_ENA_IRQ = common dso_local global i32 0, align 4
@AVM_STATUS0 = common dso_local global i64 0, align 8
@AVM_STATUS1_ENA_IOM = common dso_local global i32 0, align 4
@AVM_STATUS1 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fritz_adapter*)* @fcpci_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fcpci_init(%struct.fritz_adapter* %0) #0 {
  %2 = alloca %struct.fritz_adapter*, align 8
  store %struct.fritz_adapter* %0, %struct.fritz_adapter** %2, align 8
  %3 = load i32, i32* @AVM_STATUS0_DIS_TIMER, align 4
  %4 = load i32, i32* @AVM_STATUS0_RES_TIMER, align 4
  %5 = or i32 %3, %4
  %6 = load i32, i32* @AVM_STATUS0_ENA_IRQ, align 4
  %7 = or i32 %5, %6
  %8 = load %struct.fritz_adapter*, %struct.fritz_adapter** %2, align 8
  %9 = getelementptr inbounds %struct.fritz_adapter, %struct.fritz_adapter* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @AVM_STATUS0, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i32 @outb(i32 %7, i64 %12)
  %14 = load i32, i32* @AVM_STATUS1_ENA_IOM, align 4
  %15 = load %struct.fritz_adapter*, %struct.fritz_adapter** %2, align 8
  %16 = getelementptr inbounds %struct.fritz_adapter, %struct.fritz_adapter* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = or i32 %14, %17
  %19 = load %struct.fritz_adapter*, %struct.fritz_adapter** %2, align 8
  %20 = getelementptr inbounds %struct.fritz_adapter, %struct.fritz_adapter* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @AVM_STATUS1, align 8
  %23 = add nsw i64 %21, %22
  %24 = call i32 @outb(i32 %18, i64 %23)
  %25 = call i32 @mdelay(i32 10)
  ret void
}

declare dso_local i32 @outb(i32, i64) #1

declare dso_local i32 @mdelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
